--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <title>Повелитель галактики</title>
     <link href="css/main.css" rel="stylesheet">
-    <script src="js/lib.js"></script>
+    <script src="js/bar.js"></script>
+    <script src="js/rocet.js"></script>
+    <script src="js/flyObject.js"></script>
+    <script src="js/meteor.js"></script>
+    <script src="js/apteka.js"></script>
+    <script src="js/energy_ballon.js"></script>
+    <script src="js/ship.js"></script>
     <script src="js/shooter.js"></script>
+    <script src="js/start.js"></script>
 </head>
 <body>
 <h1 align="center">Тест новый шутер</h1>
