--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Повелитель галактики</title>
-    <link href="css/main.css" rel="stylesheet">
-    <script src="js/bar.js"></script>
-    <script src="js/rocet.js"></script>
-    <script src="js/flyObject.js"></script>
-    <script src="js/meteor.js"></script>
-    <script src="js/apteka.js"></script>
-    <script src="js/energy_ballon.js"></script>
-    <script src="js/ship.js"></script>
-    <script src="js/shooter.js"></script>
-    <script src="js/start.js"></script>
-</head>
-<body>
-<h1 align="center">Тест новый шутер</h1>
-<div id = "container">
-    <div id="information">Количество объектов во Вселенной</div>
-    <canvas id = "holst" width="600" height="600"></canvas>
-</div>
-</body>
+ <head>
+  <meta charset="utf-8">
+  <title></title>
+  <link href="css/main.css" rel="stylesheet">
+     <script src="js/bar.js"></script>
+     <script src="js/rocet.js"></script>
+     <script src="js/flyObject.js"></script>
+     <script src="js/meteor.js"></script>
+     <script src="js/apteka.js"></script>
+     <script src="js/energy_ballon.js"></script>
+     <script src="js/ship.js"></script>
+     <script src="js/shooter.js"></script>
+     <script src="js/start.js"></script>
+ </head>
+ <body>
+    <div class="container">
+            <h1 align="center">Тест новый шутер</h1>
+            <div id = "container">
+                <div id="panel">
+                    <div id="information">Количество объектов во Вселенной</div>
+                    <div id="control">
+                        <input type="checkbox" checked id="check"><label id="lbl">Звук</label>
+                    </div>
+                </div>
+                <canvas id = "holst" width="600" height="600"></canvas>
+            </div>
+        </div>
+    </div>
+ </body>
 </html>
